--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,6 +13,7 @@
     "@liveblocks/client": "^3.1.3",
     "@liveblocks/react": "^3.1.3",
     "@liveblocks/yjs": "^3.1.3",
+    "@paper-trail/db": "workspace:*",
     "@prisma/client": "^6.12.0",
     "@slate-yjs/core": "^1.0.2",
     "@slate-yjs/react": "^1.1.0",
@@ -27,8 +28,7 @@
     "slate": "^0.114.0",
     "slate-react": "^0.114.2",
     "yjs": "^13.6.27",
-    "zod": "^4.0.5",
-    "@paper-trail/db": "workspace:*"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
