--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:db": "turbo run build --filter=db",
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "dev:client": "turbo run dev --filter=client",
     "dev:express-backend": "turbo run dev --filter=express-backend",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
