--- a/apps/express-backend/package.json
+++ b/apps/express-backend/package.json
@@ -12,24 +12,30 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
+    "@paper-trail/db": "workspace:*",
     "@prisma/client": "^6.11.1",
     "express": "^5.1.0",
-    "zod": "^4.0.5",
-    "@paper-trail/db": "workspace:*"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@jest/globals": "^30.0.5",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.10",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.0",
+    "jest": "^30.0.5",
     "prisma": "^6.11.1",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
