--- a/apps/express-backend/package.json
+++ b/apps/express-backend/package.json
@@ -26,16 +26,19 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-typescript": "^7.27.1",
     "@jest/globals": "^30.0.5",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.10",
     "@types/supertest": "^6.0.3",
+    "babel-jest": "^30.0.5",
     "dotenv": "^17.2.0",
     "jest": "^30.0.5",
     "prisma": "^6.11.1",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
