--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev:express-backend": "turbo run dev --filter=express-backend",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "test:express-backend" : "turbo run test --filter=express-backend",
+    "test": "turbo run test"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
