--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -51,5 +51,10 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "y-protocols": "1.0.6"
+    }
   }
 }
