--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
-  "scripts": {
-  },
+  "scripts": {},
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^24.2.0",
     "prisma": "^6.11.1"
   },
   "dependencies": {
