--- a/apps/express-backend/tsconfig.json
+++ b/apps/express-backend/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "outDir": "dist"
   },
   "include": ["src"]
