--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "outDir": "dist"
   },
   "include": ["src"]
 }
+
